Update Location YAML

--- a/_data/2020/stellenbosch/location.yml
+++ b/_data/2020/stellenbosch/location.yml
@@ -1,7 +1,6 @@
 image: /assets/images/stellenbosch.jpg
-title: Stellenbosch [POSTPONED]
+title: Stellenbosch
 subtitle: Stellenbosch, South Africa
-description: "June 15 to June 26, 2020"
+description: "June 8 to June 26, 2020"
 link: stellenbosch
 year: 2020
-order: 99
