--- a/_data/2020/stellenbosch/location.yml
+++ b/_data/2020/stellenbosch/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/stellenbosch.jpg
 title: Stellenbosch
-subtitle: Stellenbosch, South Africa
+subtitle: Virtual event
 description: "June 8 to June 26, 2020"
 link: stellenbosch
 year: 2020
