--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -1,46 +1,98 @@
 - date: 2020-06-14
   events:
-    - name: "5:00pm Opening Meet and Greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
+    - name: "5:00pm Meet-and-greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
 
 - date: 2020-06-15
+  name: Introduction and Ethics
   events:
-    - name: "9:00am-12pm Small Group Discussions with Matt Salganik and Chris Bail (check back here to find your group's assigned half-hour time block"
+    - name: "10:00 - 10:30 Introduction and logistics (*Zoom*)"
+    - name: "10:30 - 11:30 Small group discusions (*Zoom*)"
+    - name: "11:30 - 12:00 Break"
+    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "1:00 - 1:30 Break"
+    - name: "1:30 - 1:45 Introduction to the group exercise (*Zoom*)"
+    - name: "1:45 - 2:45 Small group discussion of [Case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) (*Zoom*)"
+    - name: "2:45 - 3:15 Whole group debrief about case study (*Zoom*)"
+    - name: "3:15 - 3:45 Debrief and logistics (*Zoom*)"
 
 - date: 2020-06-16
-  events:
-    - name: "9:00am-12pm Small Group Discussions with Chris Bail (check back here to find your group's assigned half-hour time block"
+  name: "Collecting Digital Trace Data"
+    events:
+      - name: "10:00 - 10:15 Logistics (*Zoom*)"
+      - name: "10:15 - 11:30 Small group discussions (*Zoom*)"
+      - name: "11:30 - 12:00 Break"
+      - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+      - name: "1:00 - 1:15 Break"
+      - name: "1:15 - 1:30 Introduction to the group exercise (*Zoom*)"
+      - name: "1:30 - 3:00 Group excercise (*Zoom*)"
+      - name: "3:00 - 3:15 Whole group debrief about group excercise (*Zoom*)"
+      - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+      - name: "4:00 - 5:30 Possible guest speaker"
+
 
 - date: 2020-06-17
-  events:
-    - name: "9:00am-12pm Small Group Discussions with Chris Bail (check back here to find your group's assigned half-hour time block"
-
+  name: "Automated Text Analysis"
+    events:
+      - name: "10:00 - 10:15 Logistics (*Zoom*)"
+      - name: "10:15 - 11:30 Small group discussions (*Zoom*)"
+      - name: "11:30 - 12:00 Break"
+      - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+      - name: "1:00 - 1:15 Break"
+      - name: "1:15 - 1:30 Introduction to the group exercise (*Zoom*)"
+      - name: "1:30 - 3:00 Group excercise(*Zoom*)"
+      - name: "3:00 - 3:15 Whole group debrief about group excercise (*Zoom*)"
+      - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+      - name: "4:00 - 5:30 Possible guest speaker
 - date: 2020-06-18
-  events:
-    - name: "9:00am-12pm Small Group Discussions with Matt Salganik (check back here to find your group's assigned half-hour time block"
-
+  name: "Surveys in the Digital Age"
+    events:
+      - name: "10:00 - 10:15 Logistics (*Zoom*)"
+      - name: "10:15 - 10:30 Introduction to the group exercise (*Zoom*)"
+      - name: "10:30 - 11:30 Morning group excercise (*Zoom*)"
+      - name: "11:30 - 12:00 Break"
+      - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+      - name: "1:00 - 1:15 Break"
+      - name: "1:15 - 3:00 Afternoon group excercise (*Zoom*)"
+      - name: "3:00 - 3:15 Whole group debrief about group excercise (*Zoom*)"
+      - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+      - name: "4:00 - 5:30 Possible guest speaker
 - date: 2020-06-19
-  events:
-    - name: "9:00am-12pm Small Group Discussions with Matt Salganik (check back here to find your group's assigned half-hour time block"
+  name: "Mass collaboratation and machine learning"
+    events:
+      - name: "10:00 - 10:15 Logistics (*Zoom*)"
+      - name: "10:15 - 10:30 Introduction to the group exercise (*Zoom*)"
+      - name: "10:30 - 11:30 Participate in the Fraglie Families Challenge (*Zoom*)"
+      - name: "11:30 - 12:00 Break"
+      - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+      - name: "1:00 - 1:15 Break"
+      - name: "1:15 - 3:15 Continue participating in the Fragile Families Challenge (*Zoom*)"
+      - name: "3:15 - 3:30 Whole group debrief about group excercise (*Zoom*)"
+      - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+      - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-20
-  events:
-    - name: "9:00am-12pm Small Group Discussions with Matt Salganik (check back here to find your group's assigned half-hour time block"
+  name: Day off
 
 - date: 2020-06-21
   name: Day off
 
 - date: 2020-06-22
-
-  name: Work on group projects or join SICSS Festival Events (time TBD)
+  name: Work on group projects (optional) and/or participate in SICSS Festival
+      - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-23
-  name: Work on group projects or join SICSS Festival Events (time TBD)
+  name: Work on group projects (optional) and/or participate in SICSS Festival
+      - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-24
-  name: Work on group projects or join SICSS Festival Events (time TBD)
+  name: Work on group projects (optional) and/or participate in SICSS Festival
+      - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-25
-  name: Work on group projects or join SICSS Festival Events (time TBD)
+  name: Work on group projects (optional) and/or participate in SICSS Festival
+      - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-26
-  name: 12pm-5pm Final Research Proposal Presentations
+  name: Present group projects
+    - name: "12:00 - 4:00 Present group projects (*Zoom*)"
+    - name: "4:00 - 4:30 Debrief and conclusion"
