--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -93,6 +93,6 @@
       - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-26
-  name: Present group projects
+  name: Present group projects and/or participate in SICSS Festival
     - name: "12:00 - 4:00 Present group projects (*Zoom*)"
     - name: "4:00 - 4:30 Debrief and conclusion"
