--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -3,7 +3,7 @@
     - name: "5:00pm Meet-and-greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
 
 - date: 2020-06-15
-  name: Introduction and Ethics
+  name: "Introduction and Ethics"
   events:
     - name: "10:00 - 10:30 Introduction and logistics (*Zoom*)"
     - name: "10:30 - 11:30 Small group discusions (*Zoom*)"
@@ -42,7 +42,8 @@
       - name: "1:30 - 3:00 Group excercise(*Zoom*)"
       - name: "3:00 - 3:15 Whole group debrief about group excercise (*Zoom*)"
       - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
-      - name: "4:00 - 5:30 Possible guest speaker
+      - name: "4:00 - 5:30 Possible guest speaker"
+
 - date: 2020-06-18
   name: "Surveys in the Digital Age"
     events:
@@ -55,7 +56,8 @@
       - name: "1:15 - 3:00 Afternoon group excercise (*Zoom*)"
       - name: "3:00 - 3:15 Whole group debrief about group excercise (*Zoom*)"
       - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
-      - name: "4:00 - 5:30 Possible guest speaker
+      - name: "4:00 - 5:30 Possible guest speaker"
+
 - date: 2020-06-19
   name: "Mass collaboratation and machine learning"
     events:
@@ -71,28 +73,28 @@
       - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-20
-  name: Day off
+  name: "Day off"
 
 - date: 2020-06-21
-  name: Day off
+  name: "Day off"
 
 - date: 2020-06-22
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: "Work on group projects (optional) and/or participate in SICSS Festival"
       - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-23
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: "Work on group projects (optional) and/or participate in SICSS Festival"
       - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-24
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: "Work on group projects (optional) and/or participate in SICSS Festival"
       - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-25
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: "Work on group projects (optional) and/or participate in SICSS Festival"
       - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-26
-  name: Present group projects and/or participate in SICSS Festival
+  name: "Present group projects and/or participate in SICSS Festival"
     - name: "12:00 - 4:00 Present group projects (*Zoom*)"
     - name: "4:00 - 4:30 Debrief and conclusion"
