--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -3,7 +3,7 @@
     - name: "5:00pm Meet-and-greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
 
 - date: 2020-06-15
-  name: "Introduction and Ethics"
+  name: Introduction and Ethics
   events:
     - name: "10:00 - 10:30 Introduction and logistics (*Zoom*)"
     - name: "10:30 - 11:30 Small group discusions (*Zoom*)"
@@ -16,7 +16,7 @@
     - name: "3:15 - 3:45 Debrief and logistics (*Zoom*)"
 
 - date: 2020-06-16
-  name: "Collecting Digital Trace Data"
+  name: Collecting Digital Trace Data
     events:
       - name: "10:00 - 10:15 Logistics (*Zoom*)"
       - name: "10:15 - 11:30 Small group discussions (*Zoom*)"
@@ -31,7 +31,7 @@
 
 
 - date: 2020-06-17
-  name: "Automated Text Analysis"
+  name: Automated Text Analysis
     events:
       - name: "10:00 - 10:15 Logistics (*Zoom*)"
       - name: "10:15 - 11:30 Small group discussions (*Zoom*)"
@@ -45,7 +45,7 @@
       - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-18
-  name: "Surveys in the Digital Age"
+  name: Surveys in the Digital Age
     events:
       - name: "10:00 - 10:15 Logistics (*Zoom*)"
       - name: "10:15 - 10:30 Introduction to the group exercise (*Zoom*)"
@@ -59,7 +59,7 @@
       - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-19
-  name: "Mass collaboratation and machine learning"
+  name: Mass collaboratation and machine learning
     events:
       - name: "10:00 - 10:15 Logistics (*Zoom*)"
       - name: "10:15 - 10:30 Introduction to the group exercise (*Zoom*)"
@@ -73,28 +73,33 @@
       - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-20
-  name: "Day off"
+  name: Day off
 
 - date: 2020-06-21
-  name: "Day off"
+  name: Day off
 
 - date: 2020-06-22
-  name: "Work on group projects (optional) and/or participate in SICSS Festival"
+  name: Work on group projects (optional) and/or participate in SICSS Festival
+    events:
       - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-23
-  name: "Work on group projects (optional) and/or participate in SICSS Festival"
+  name: Work on group projects (optional) and/or participate in SICSS Festival
+    events:
       - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-24
-  name: "Work on group projects (optional) and/or participate in SICSS Festival"
+  name: Work on group projects (optional) and/or participate in SICSS Festival
+    events:
       - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-25
-  name: "Work on group projects (optional) and/or participate in SICSS Festival"
+  name: Work on group projects (optional) and/or participate in SICSS Festival
+    events:
       - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-26
-  name: "Present group projects and/or participate in SICSS Festival"
+  name: Present group projects and/or participate in SICSS Festival
+    events:
     - name: "12:00 - 4:00 Present group projects (*Zoom*)"
     - name: "4:00 - 4:30 Debrief and conclusion"
