--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -14,3 +14,17 @@
     - name: "1:45 - 2:45 Small group discussion of [Case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) (*Zoom*)"
     - name: "2:45 - 3:15 Whole group debrief about case study (*Zoom*)"
     - name: "3:15 - 3:45 Debrief and logistics (*Zoom*)"
+
+- date: 2020-06-16
+  name: Collecting Digital Trace Data
+    events:
+      - name: "10:00 - 10:15 Logistics (*Zoom*)"
+      - name: "10:15 - 11:30 Small group discussions (*Zoom*)"
+      - name: "11:30 - 12:00 Break"
+      - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+      - name: "1:00 - 1:15 Break"
+      - name: "1:15 - 1:30 Introduction to the group exercise (*Zoom*)"
+      - name: "1:30 - 3:00 Group excercise (*Zoom*)"
+      - name: "3:00 - 3:15 Whole group debrief about group excercise (*Zoom*)"
+      - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+      - name: "4:00 - 5:30 Possible guest speaker"
