--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -28,3 +28,45 @@
     - name: "3:00 - 3:15 Whole group debrief about group excercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
     - name: "4:00 - 5:30 Possible guest speaker"
+
+- date: 2020-06-17
+  name: Automated Text Analysis
+  events:
+    - name: "10:00 - 10:15 Logistics (*Zoom*)"
+    - name: "10:15 - 11:30 Small group discussions (*Zoom*)"
+    - name: "11:30 - 12:00 Break"
+    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "1:00 - 1:15 Break"
+    - name: "1:15 - 1:30 Introduction to the group exercise (*Zoom*)"
+    - name: "1:30 - 3:00 Group excercise(*Zoom*)"
+    - name: "3:00 - 3:15 Whole group debrief about group excercise (*Zoom*)"
+    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "4:00 - 5:30 Possible guest speaker"
+
+- date: 2020-06-18
+  name: Surveys in the Digital Age
+  events:
+    - name: "10:00 - 10:15 Logistics (*Zoom*)"
+    - name: "10:15 - 10:30 Introduction to the group exercise (*Zoom*)"
+    - name: "10:30 - 11:30 Morning group excercise (*Zoom*)"
+    - name: "11:30 - 12:00 Break"
+    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "1:00 - 1:15 Break"
+    - name: "1:15 - 3:00 Afternoon group excercise (*Zoom*)"
+    - name: "3:00 - 3:15 Whole group debrief about group excercise (*Zoom*)"
+    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "4:00 - 5:30 Possible guest speaker"
+
+- date: 2020-06-19
+  name: Mass collaboratation and machine learning
+  events:
+    - name: "10:00 - 10:15 Logistics (*Zoom*)"
+    - name: "10:15 - 10:30 Introduction to the group exercise (*Zoom*)"
+    - name: "10:30 - 11:30 Participate in the Fraglie Families Challenge (*Zoom*)"
+    - name: "11:30 - 12:00 Break"
+    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "1:00 - 1:15 Break"
+    - name: "1:15 - 3:15 Continue participating in the Fragile Families Challenge (*Zoom*)"
+    - name: "3:15 - 3:30 Whole group debrief about group excercise (*Zoom*)"
+    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "4:00 - 5:30 Possible guest speaker"
