--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -70,3 +70,35 @@
     - name: "3:15 - 3:30 Whole group debrief about group excercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
     - name: "4:00 - 5:30 Possible guest speaker"
+
+- date: 2020-06-20
+  name: Day off
+
+- date: 2020-06-21
+  name: Day off
+
+- date: 2020-06-22
+  name: Work on group projects (optional) and/or participate in SICSS Festival
+  events:
+    - name: "4:00 - 5:30 Possible guest speaker"
+
+- date: 2020-06-23
+  name: Work on group projects (optional) and/or participate in SICSS Festival
+  events:
+    - name: "4:00 - 5:30 Possible guest speaker"
+
+- date: 2020-06-24
+  name: Work on group projects (optional) and/or participate in SICSS Festival
+  events:
+    - name: "4:00 - 5:30 Possible guest speaker"
+
+- date: 2020-06-25
+  name: Work on group projects (optional) and/or participate in SICSS Festival
+  events:
+    - name: "4:00 - 5:30 Possible guest speaker"
+
+- date: 2020-06-26
+  name: Present group projects and/or participate in SICSS Festival
+  events:
+    - name: "12:00 - 4:00 Present group projects (*Zoom*)"
+    - name: "4:00 - 4:30 Debrief and conclusion"
