--- a/_data/2020/montreal/schedule.yml
+++ b/_data/2020/montreal/schedule.yml
@@ -1,48 +1,91 @@
-- date: 2020-06-15
+- date: 2020-06-1 : 2020-06-5
+  name: Pre-SICSS Courses : Interaction with TA and organizer
+
+- date: 2020-06-8 : 2020-06-12
+  name: Courses posted online
   events: 
-    - name: "Schedule coming soon..."
+    - name: "Monday : Ethics"
+    - name: "Tuesday : Collecting Digital Trace Data"
+    - name: "Wednesday: Automated Text Analysis"
+    - name: "Thursday: Surveys in the Digital Age"
+    - name: "Friday: Machine Learning"
+
+- date: 2020-06-15
+  name: Introduction and Ethics
+  events:
+    - name: "10:00 - 10:30 Introduction and logistics (*Zoom*)"
+    - name: "10:30 - 11:30 Small group discusions (*Zoom*)"
+    - name: "11:30 - 12:00 Break"
+    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "1:00 - 1:30 Break"
+    - name: "1:30 - 1:45 Introduction to the group exercise (*Zoom*)"
+    - name: "1:45 - 2:45 Small group discussion of [Case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) (*Zoom*)"
+    - name: "2:45 - 3:15 Whole group debrief about case study (*Zoom*)"
+    - name: "3:15 - 3:45 Debrief and logistics (*Zoom*)"
 
 - date: 2020-06-16
-  events: 
-    - name: "Schedule coming soon..."
+  name: Collecting Digital Trace Data
+  events:
+    - name: "10:00 - 10:15 Logistics (*Zoom*)"
+    - name: "10:15 - 11:30 Small group discussions (*Zoom*)"
+    - name: "11:30 - 12:00 Break"
+    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "1:00 - 1:15 Break"
+    - name: "1:15 - 1:30 Introduction to the group exercise (*Zoom*)"
+    - name: "1:30 - 3:00 Group excercise (*Zoom*)"
+    - name: "3:00 - 3:15 Whole group debrief about group excercise (*Zoom*)"
+    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-17
-  events: 
-    - name: "Schedule coming soon..."
+  name: Automated Text Analysis
+  events:
+    - name: "10:00 - 10:15 Logistics (*Zoom*)"
+    - name: "10:15 - 11:30 Small group discussions (*Zoom*)"
+    - name: "11:30 - 12:00 Break"
+    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "1:00 - 1:15 Break"
+    - name: "1:15 - 1:30 Introduction to the group exercise (*Zoom*)"
+    - name: "1:30 - 3:00 Group excercise(*Zoom*)"
+    - name: "3:00 - 3:15 Whole group debrief about group excercise (*Zoom*)"
+    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-18
-  events: 
-    - name: "Schedule coming soon..."
+  name: Surveys in the Digital Age
+  events:
+    - name: "10:00 - 10:15 Logistics (*Zoom*)"
+    - name: "10:15 - 10:30 Introduction to the group exercise (*Zoom*)"
+    - name: "10:30 - 11:30 Morning group excercise (*Zoom*)"
+    - name: "11:30 - 12:00 Break"
+    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "1:00 - 1:15 Break"
+    - name: "1:15 - 3:00 Afternoon group excercise (*Zoom*)"
+    - name: "3:00 - 3:15 Whole group debrief about group excercise (*Zoom*)"
+    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-19
-  events: 
-    - name: "Schedule coming soon..."
+  name: Machine Learning
+  events:
+    - name: "10:00 - 10:15 Logistics (*Zoom*)"
+    - name: "10:15 - 10:30 Introduction to the group exercise (*Zoom*)"
+    - name: "10:30 - 11:30 Morning group excercise (*Zoom*)"
+    - name: "11:30 - 12:00 Break"
+    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "1:00 - 1:15 Break"
+    - name: "1:15 - 3:00 Afternoon group excercise (*Zoom*)"
+    - name: "3:00 - 3:15 Whole group debrief about group excercise (*Zoom*)"
+    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "4:00 - 5:30 Possible guest speaker"
 
 - date: 2020-06-20
-  events: 
-    - name: "Schedule coming soon..."
+  name: Day off
 
 - date: 2020-06-21
-  events: 
-    - name: "Day off / Repos"
+  name: Day off
 
-- date: 2020-06-22
+- date: 2020-06-22 : 2020-06-26
   events: 
-    - name: "Work on group project - projet en groupe"
-
-- date: 2020-06-23
-  events: 
-    - name: "Work on group project - projet en groupe"
-
-- date: 2020-06-24
-  events: 
-    - name: "Work on group project - projet en groupe"
-
-- date: 2020-06-25
-  events: 
-    - name: "Work on group project - projet en groupe"
-
-- date: 2020-06-26
-  events: 
-    - name: "Present group projects/conclusion - Présentation projets de groupe"
+    - name: "Work on group projects (optional)"
     
