Adding quotes around the very last name
Since this line has special characters, I imagine it might need quotes.

--- a/_data/2020/montreal/schedule.yml
+++ b/_data/2020/montreal/schedule.yml
@@ -74,5 +74,5 @@
   name: Day off
 
 - date: 2020-06-22
-  name: (2020-06-22 : 2020-06-26) : Work on group projects (optional)
+  name: "(2020-06-22 : 2020-06-26) : Work on group projects (optional)"
     
