--- a/_data/2020/montreal/schedule.yml
+++ b/_data/2020/montreal/schedule.yml
@@ -1,3 +1,15 @@
+- date: 2020-06-1 : 2020-06-5
+  name: "Pre-SICSS Courses: Interaction with TA and organizer (Optional)"
+
+- date: 2020-06-8 : 2020-06-12
+  name: Courses posted online
+  events:   
+    - name: "Monday: Ethics"
+    - name: "Tuesday: Collecting Digital Trace Data"
+    - name: "Wednesday: Automated Text Analysis"
+    - name: "Thursday: Surveys in the Digital Age"
+    - name: "Friday: Machine Learning"
+    
 - date: 2020-06-15
   name: Introduction and Ethics
   events:
