--- a/_data/2020/howard-mathematica/location.yml
+++ b/_data/2020/howard-mathematica/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/howard.jpg
-title: Howard-Mathematica
+title: Howard-Mathematica [POSTPONED]
 subtitle: Washington D.C.
 subtitle: Washington, D.C.
 description: "From the evening of Friday June 12 to the morning of June 27 2020, Howard University and Mathematica will host a partner event for the Summer Institute in Computational Social Science."
