Postpone Howard-Mathematica
Moved to the bottom.

--- a/_data/2020/howard-mathematica/location.yml
+++ b/_data/2020/howard-mathematica/location.yml
@@ -5,3 +5,4 @@ subtitle: Washington, D.C.
 description: "From the evening of Friday June 12 to the morning of June 27 2020, Howard University and Mathematica will host a partner event for the Summer Institute in Computational Social Science."
 link: howard-mathematica
 year: 2020
+order: 99
