--- a/_data/2020/howard-mathematica/schedule.yml
+++ b/_data/2020/howard-mathematica/schedule.yml
@@ -1,3 +1,6 @@
+**ATTENTION: SICSS-Howard-Mathematica has been postponed until 2021 due to COVID-19.**
+<b>[Join our Email List for the most up to date information on the future of SICSS-Howard/Mathematica.](https://docs.google.com/forms/d/17poF12b9iLVCND-qUErcu7XluNlVDQq07syOeGOSMkY/viewform?edit_requested=true)</b>
+
 - date: 2020-06-12
   name: Coming soon
   
