--- a/_data/2020/istanbul/participants.yml
+++ b/_data/2020/istanbul/participants.yml
@@ -17,3 +17,8 @@
   image: /assets/images/EzgiSiirKibris.png
   bio: "Ezgi Siir Kibris is a Ph.D. student at the University of Rochester, Department of Political Science. She has MA degrees in Political Science and European Studies, and BA in Economics from Sabanci University. Her research revolves around judicial politics, international courts, corruption, and democratic backsliding. She is interested in quantitative methods specifically causal inference, machine learning, and natural language processing."
   website:
+  
+- name: Leo Bauer
+  image: /assets/images/LeoBauer.jpeg
+  bio: "Leo is a second-year MA student in the International Studies / Peace and Conflict Research program at Goethe University Frankfurt. He just completed an internship with the Max Planck Research Group How ‘Terrorists’ Learn in Halle, Germany, conducting an empirical study on the impact of terrorism research on subnational security policymaking in Germany. His research interests revolve around civil war and armed non-state actors, with a particular focus on rebel governance, diplomacy and warfighting. To further understand armed non-state actor behavior, he is eager to creatively employ computational methods. Outside of class, he participates in the civil society initiative Frankfurter Demokratiekonvent (Frankfurt Democracy Convention), which once a year hosts a municipal direct democracy forum with randomly selected citizens to work on more direct forms of political participation. Leo holds a BA in American Studies from Leipzig University and has studied and worked abroad in the US and Turkey."
+  website:
