--- a/_data/2020/howard-mathematica/sidebar.yml
+++ b/_data/2020/howard-mathematica/sidebar.yml
@@ -6,7 +6,7 @@
   url: "people"
 - name: Travel
   url: "travel"
-- name: Schedule & Materials
+- name: Pre-SICSS Events
   url: "schedule"
 - name: News
   url: "news"
