--- a/_data/2020/maastricht/schedule.yml
+++ b/_data/2020/maastricht/schedule.yml
@@ -1,3 +1,52 @@
-- date: 2020-07-28
+- date: 2020-06-14
   events:
-    - name: "Schedule coming soon..."
+    - name: "5:00pm Meet-and-greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
+
+- date: 2020-06-15
+  name: "<b>Introduction and Ethics</b>"
+  events:
+    - name: "12:00 - 19:00 Online activities (more details coming soon)"
+    
+    
+- date: 2020-06-16
+  name: "<b>Digital Trace Data</b>"
+  events:
+    - name: "12:00 - 19:00 Online activities (more details coming soon)"
+    
+- date: 2020-06-17
+  name: "<b>Automated text analysis</b>"
+  events:
+    - name: "12:00 - 19:00 Online activities (more details coming soon)"
+    
+- date: 2020-06-18
+  name: "<b>Surveys in the Digital Age</b>"
+  events:
+    - name: "12:00 - 19:00 Online activities (more details coming soon)"
+    
+- date: 2020-06-19
+  name: "<b>Network Analysis in Law</b>"
+  events:
+    - name: "12:00 - 19:00 Online activities (more details coming soon)"
+    
+- date: 2020-06-20
+  name: Day off
+  
+- date: 2020-06-21
+  name: Day off
+  
+- date: 2020-06-22
+  name: "<b>Experiments in the Digital Age</b>"
+  events:
+    - name: "12:00 - 19:00 Online activities (more details coming soon)"
+    
+- date: 2020-06-23
+  name: "<b>Work on group projects</b>"
+
+- date: 2020-06-24
+  name: "<b>Work on group projects</b>"
+
+- date: 2020-06-25
+  name: "<b>Work on group projects</b>"
+
+- date: 2020-06-26
+  name: "<b>Present Group Projects</b>"
