--- a/_data/2020/istanbul/participants.yml
+++ b/_data/2020/istanbul/participants.yml
@@ -27,3 +27,8 @@
   image: /assets/images/EfeBaslar.jpg
   bio: "Efe is an  industrial engineer whose interests mainly lie at the conjunction of social sciences, mathematics and statistics. This usually results in investigating questions relating to behavioural decision-making. Specifically, he would like to learn about how agents perceive and response to threat and how can automated agents that make decisions in our stead be taught (or if they should) to incorporate behavioural nuances, in a market setting.  He got his BSc and MSc degrees from Istanbul Technical University. While he is currently a research assistant at the same institute, he will continue his studies as a PhD student at Berlin School of Economics, if there is still a recognizable world come October."
   website:
+
+- name: Cansu Basak
+  image: /assets/images/CansuBasak.jpg
+  bio: "Cansu Basak is a Ph.D. student at the Ankara University, Department of Economics. She holds an MA degree in Development Economics from Marmara University and a BA in Physics Engineering from Istanbul Techical University. She seeks to apply analytical and machine learning techniques to various macro-economic indicators, and aims at utilizing these tools for analyzing socio-economic relations from a critical point of view in her academic work."
+  website:
