Added a missing quote

--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -9,7 +9,7 @@
     - name: "Welcome to virtual SICSS"
     - name: "Introduction to computational social science"
     - name: "Why SICSS?"
-    - name: "Ethics: Principles-based approach
+    - name: "Ethics: Principles-based approach"
     - name: "Four areas of difficulty: Informed consent, informational risk, privacy, and making"
     
 - day: Day 2
