--- a/_data/2020/istanbul/participants.yml
+++ b/_data/2020/istanbul/participants.yml
@@ -32,3 +32,8 @@
   image: /assets/images/CansuBasak.jpg
   bio: "Cansu Basak is a Ph.D. student at the Ankara University, Department of Economics. She holds an MA degree in Development Economics from Marmara University and a BA in Physics Engineering from Istanbul Techical University. She seeks to apply analytical and machine learning techniques to various macro-economic indicators, and aims at utilizing these tools for analyzing socio-economic relations from a critical point of view in her academic work."
   website:
+
+- name: Kyle Beattie
+  image: /assets/images/KyleBeattie.jpg
+  bio: "Kyle Beattie is a professor and researcher of Political Science and English as a Second Language. He obtained his BA in Political Science from Humboldt State University and his MA in Teaching: TESOL from the University of Southern California. Here is a list of his recent research. Currently, he is a PhD student at the University of Alberta in the Department of Political Science specializing in International Relations and Comparative Politics. His doctoral dissertation focuses on the field of corruption studies. Whereas most of the discipline of corruption studies has largely focused on developing world corruption, he is interested in the types of corruption that emanate from the developed world. These forms of corruption, which are often much more sophisticated, include illegal wars, economic sanctions, fiat currency manipulation, the UN veto vote, and others. He is also an amateur self-taught programmer and avid language learner. He speaks and researches in English, Spanish, and Arabic. Here is a link to his personal website to find out more."
+  website:
