--- a/_data/2020/istanbul/teaching_assistants.yml
+++ b/_data/2020/istanbul/teaching_assistants.yml
@@ -2,3 +2,8 @@
   image: /2019/istanbul/images/yet.jpg
   bio: "Yunus Emre Tapan is currently doing his Ph.D. in International Relations at Kadir Has University. His research interests are at the intersection between data science and social sciences. He is employing social network analysis and computational text analysis methods to study online communities with a particular focus on radicalization and extremism. He gained his Bachelor's degree in Economics from Bogazici University and his Master's degree in Middle East Studies from Middle Eastern Technical University. He was one of the participants of SICSS-Helsinki in 2018 and one of the teaching assistants of SICSS-Istanbul in 2019."
   website: https://tapanyemre.github.io/
+
+
+- name: Ahmet Kurnaz
+  image: /2019/istanbul/images/Ahmet_Kurnaz.png
+  bio: "Ahmet is a PhD candidate at Çanakkale 18 Mart University’s Department of Political Science. Ahmet comes from a computer science background and has advanced knowledge of R. He works on polarisation and political communication online and specialises in text mining and analysis. He was a visiting researcher at the Oxford Internet Institute in 2017 and 2018, and the University of Maryland, College Park in 2015."
