add a participant's bio

--- a/_data/2020/istanbul/participants.yml
+++ b/_data/2020/istanbul/participants.yml
@@ -47,3 +47,8 @@
   image: /assets/images/BilalSaleymi.png
   bio: "Bilal Salaymeh is a Ph.D. student in the International Relations and Political Science program at the Graduate Institute of International and Development Studies IHEID in Genève. He holds a BA and MS in International Relations. His research interests revolve around: the relations between authoritarian political regimes’ nature and possibilities of transition/change; post-conflict state/peacebuilding, SSR and CVE; and armed non-state actors, with a solid background in politics of the Middle East and experience in policy-oriented research. Bilal is interested in the emerging computational social science approaches and their potential to advance political research."
   website:
+
+- name: Feride Saliha Taşpınar
+  image: /assets/images/FerideSalihaTaspınar.jpg
+  bio: "Saliha Taşpınar is a masters student in Political Science department at Sabancı University. She holds a double major BA degree in Political Science and International Relations and History from Boğaziçi University. Her field of interest is political methodology with a focus on quantitative and formal political analysis."
+  website:
