--- a/_data/2020/istanbul/participants.yml
+++ b/_data/2020/istanbul/participants.yml
@@ -49,6 +49,6 @@
   website:
 
 - name: Feride Saliha Taşpınar
-  image: /assets/images/FerideSalihaTaspınar.jpg
+  image: /assets/images/FerideSalihaTaspinar.jpg
   bio: "Saliha Taşpınar is a masters student in Political Science department at Sabancı University. She holds a double major BA degree in Political Science and International Relations and History from Boğaziçi University. Her field of interest is political methodology with a focus on quantitative and formal political analysis."
   website:
