--- a/_data/2020/istanbul/participants.yml
+++ b/_data/2020/istanbul/participants.yml
@@ -55,20 +55,6 @@
   
 - name: Fuat Kına
   image: /assets/images/FuatKina.PNG
-  bio: "Fuat Kına is a PhD student at the Sociology Department of Koç University since 2018. Before joining the project, he graduated with B.S. degree in Economics from Boğaziçi University (2015) and received his master’s degree with quantitative research on the relationship between anti-immigrant attitudes and labor precarity in Europe (2018) from İstanbul Şehir University. He is currently working on the relationship between social movements, their targets and social assistance programs by utilizing advanced level quantitative techniques on causal inference. Some of his research interests are social policy, social movements, labor studies, Islamist movements, causal inference, systematic review."
+  bio: "Fuat Kına is working as a PhD researcher at the Sociology Department (The ERC Project on Emerging Markets Welfare: https://emw.ku.edu.tr/) of Koç University since 2018. He graduated with B.S. degree in Economics from Boğaziçi University (2015) and received his master’s degree with quantitative research on the relationship between anti-immigrant attitudes and labor precarity in Europe (2018) from İstanbul Şehir University. He is currently studying on the relationship between social movements, their targets and social assistance programs by utilizing advanced level quantitative techniques on causal inference. Some of his research interests are social policy, social movements, labor studies, Islamist movements, causal inference, systematic literature review."
   website:
 
-- name: 
-  image: /assets/images/
-  bio: ""
-  website:
-
-- name: 
-  image: /assets/images/
-  bio: ""
-  website:
-  
-- name: 
-  image: /assets/images/
-  bio: ""
-  website:
