--- a/_data/2020/istanbul/participants.yml
+++ b/_data/2020/istanbul/participants.yml
@@ -62,3 +62,8 @@
   image: /assets/images/IbtissamMakdoun.jpg
   bio: "Ibtissam Makdoun is currently doing a Ph.D. in National School of Computer Science and Systems Analysis Rabat. Her research is about improving the education system using data science. She is using Social Network Analysis and Machine learning and Data mining techniques to study study the mismatch between the education system and the job market. She has a Bachelor Degree From Multidisciplinary faculty in Errachidia in Networking and Telecommunication and her a Master Degree at National School of Applied Science in Kenitra Morocco, she majored in Security of Information systems."
   website:
+
+- name: Ozan Ahmet Cetin
+  image: /assets/images/OzanAhmetCetin.png
+  bio: "Ozan Ahmet Cetin is a PhD student at American University’s School of International Service. His research interests include international cybersecurity cooperation, technology, and alliance politics. His current work focuses on varying state responses to emerging technologies with national security implications. He holds a BA in Political Science from Bogazici University and an MA in International Relations from King's College London’s War Studies Department. Before returning to the university, he worked in the telecommunications sector and in media research."
+  website:
