--- a/_data/2020/istanbul/participants.yml
+++ b/_data/2020/istanbul/participants.yml
@@ -67,3 +67,8 @@
   image: /assets/images/OzanAhmetCetin.png
   bio: "Ozan Ahmet Cetin is a PhD student at American University’s School of International Service. His research interests include international cybersecurity cooperation, technology, and alliance politics. His current work focuses on varying state responses to emerging technologies with national security implications. He holds a BA in Political Science from Bogazici University and an MA in International Relations from King's College London’s War Studies Department. Before returning to the university, he worked in the telecommunications sector and in media research."
   website:
+  
+- name: Tekin Baykız
+  image: /assets/images/TekinBaykiz.jpg
+  bio: "Tekin Baykız is a research assistant in the Department of International Relations at Middle East Technical University (METU) in Turkey. Currently, he is a PhD candidate in the same department. He holds B.A. degrees in Computer Engineering and Computer Teaching from Ankara University and Gazi University respectively. Baykız also received a M.S. degree from Information Systems Program at METU. He worked as a researcher in the project titled “EU-GLOBAL: Transatlantic Perspectives in a Changing Global Context: Multilateralism through Regionalism”, which was financed under the European Union Seventh Framework Program. His research interests include Islamic Groups and Foreign Policy, Westernism and anti-Americanism in Turkish political thought."
+  website: 
