--- a/_data/2020/istanbul/participants.yml
+++ b/_data/2020/istanbul/participants.yml
@@ -88,8 +88,12 @@
   bio: "Özen Baş is currently a Visiting Assistant Professor of New Media at Kadir Has University. She received her BA degrees in Sociology and Political Science & International Relations at Boğaziçi University and her doctorate in Mass Communications at the Media School at Indiana University. Her research interests include the uses of social media for political activism and collective action; visual communication, and affect. She uses quantitative social scientific methods, such as controlled experiments and quantitative content analysis."
   website: 
   
-  
 - name: Betül Özturan
   image: /assets/images/BetulOzturan.JPG
-  bio: "Betül Özturan is MA student of Political Science at the University of Konstanz with specialization on International Administration and Conflict Management. She obtained her Bachelor degree from Boğaziçi University in Political Science and International Relations as well as her minor degree in Economics. Her research interests are civil wars and terrorism. She is currently learning social network analysis and text analysis methods to apply on her research."
+  bio: "Betül Özturan is a MA student of Political Science at the University of Konstanz with specialization on International Administration and Conflict Management. She obtained her Bachelor degree from Boğaziçi University in Political Science and International Relations as well as her minor degree in Economics. Her research interests are civil wars and terrorism. She is currently learning social network analysis and text analysis methods to apply on her research."
+  website: 
+
+- name: Burak Özturan
+  image: /assets/images/BurakOzturan.jpg
+  bio: "Burak is a second-year master student at the University of Konstanz in Social and Economic Data Science. He received his Economics B.A with an honors degree from Bogazici University. He stands on the ideal intersection point of social science, mathematics, and computer science for computational social science research. Currently, He is analyzing Turkish social media polarization through quantitative text analysis approaches. His research interests are political polarization, behavioral economics, collective action, and conflict studies."
   website: 
