--- a/_data/2020/istanbul/participants.yml
+++ b/_data/2020/istanbul/participants.yml
@@ -94,7 +94,7 @@
   website: 
 
 - name: Burak Özturan
-  image: /assets/images/BurakOzturan.jpg
+  image: /assets/images/BurakOzturan.png
   bio: "Burak is a second-year master student at the University of Konstanz in Social and Economic Data Science. He received his Economics B.A with an honors degree from Bogazici University. He stands on the ideal intersection point of social science, mathematics, and computer science for computational social science research. Currently, He is analyzing Turkish social media polarization through quantitative text analysis approaches. His research interests are political polarization, behavioral economics, collective action, and conflict studies."
   website: 
 
