--- a/_data/2020/istanbul/participants.yml
+++ b/_data/2020/istanbul/participants.yml
@@ -90,7 +90,7 @@
   
 - name: Betül Özturan
   image: /assets/images/BetulOzturan.JPG
-  bio: "Betül Özturan is a MA student of Political Science at the University of Konstanz with specialization on International Administration and Conflict Management. She obtained her Bachelor degree from Boğaziçi University in Political Science and International Relations as well as her minor degree in Economics. Her research interests are civil wars and terrorism. She is currently learning social network analysis and text analysis methods to apply on her research."
+  bio: "Betül Özturan is MA student of Political Science at the University of Konstanz. She is the research assistant to the Development Research Group there. She obtained her Bachelor degree from Boğaziçi University in Political Science and International Relations and her minor degree in Economics (2018). Her research interests are civil wars and terrorism. Her current research is on UN Peacekeeping mission's economic impact.  She is currently learning social network analysis and text analysis methods to apply on her research of foreign combatants in civil wars."
   website: 
 
 - name: Burak Özturan
