--- a/_data/2020/istanbul/faculty.yml
+++ b/_data/2020/istanbul/faculty.yml
@@ -1,12 +1,3 @@
-- name: Akın Ünver
-  image: /2019/istanbul/images/akin_unver.jpg
-  bio: "Akin Ünver is an associate professor of International Relations at Kadir Has University, specialising in conflict research, computational methods and digital crisis communication.
-  He is the Resident Fellow of Cyber Research Program at the Centre for Economic and Foreign Policy Research (EDAM), a Research Associate at the Center for Technology and Global Affairs, Oxford University and a Senior Research Fellow at GUARD (Global Urban Analytics for Resilient Defence) at the Alan Turing Institute."
-  website: https://www.akinunver.org/
-
-- name: Matti Nelimarkka
-  image: /assets/images/MattiNelimarkka.jpeg
-  bio: "Matti Nelimarkka serves as computational social scientists at the Faculty of Social Science, University of Helsinki. His research focuses on social computing, such as: digital democracy and politics of technology, practices of computational methods for social sciences, and hybrid media systems. He is also a visiting researcher at Aalto University, Department of Computer Science and Futurice."
-  website: http://me.mante.li
+- name: 
 
 
