--- a/_data/2020/istanbul/teaching_assistants.yml
+++ b/_data/2020/istanbul/teaching_assistants.yml
@@ -1,4 +1,1 @@
-- name: Yunus Emre Tapan
-  image: /assets/images/YunusEmreTapan.jpg
-  bio: "Emre is currently doing his Ph.D. in International Relations at Kadir Has University. His research interests are at the intersection between data science and social sciences. He is employing social network analysis and computational text analysis methods to study online communities with a particular focus on radicalization and extremism. He gained his Bachelor's degree in Economics from Bogazici University and his Master's degree in Middle East Studies from Middle Eastern Technical University. He was a participant of SICSS-Helsinki in 2018 and a teaching assistant of SICSS-Istanbul in 2019."
-  website: https://tapanyemre.github.io/
+- name: 
