Updated incorrect curriculum videos
The changes were to the video and slides for "Ethics: Principles-based approach" and to the video for "Application Programming Interfaces".

--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -47,11 +47,11 @@
         - link: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/03-ethics.pdf"
           text: "Slides"
     - name: "Ethics: Principles-based approach"
-      video: "https://www.youtube.com/embed/8gZ1Ect958M"
+      video: "https://www.youtube.com/watch?v=H_3qbmlZsp0"
       sublinks:
-        - link: "https://youtu.be/8gZ1Ect958M"
+        - link: "https://www.youtube.com/watch?v=H_3qbmlZsp0"
           text: "Video"
-        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/05-intro-group-exercise.pdf"
+        - link: "https://github.com/compsocialscience/summer-institute/blob/master/2019/materials/day1-intro-ethics/03-ethics.pdf"
           text: "Slides"
     - name: "Four areas of difficulty: informed consent, informational risk, privacy, and making decisions in the face of     uncertainty"
       video: "https://www.youtube.com/embed/75qv8d8SXW0"
@@ -107,9 +107,9 @@
         - link: "https://compsocialscience.github.io/summer-institute/2019/materials/day2-digital-trace-data/screenscraping/rmarkdown/Screenscraping.html"
           text: "Annotated Code"
     - name: "Application Programming Interfaces"
-      video: "https://www.youtube.com/embed/4KeK73JMVwM"
+      video: "https://www.youtube.com/watch?v=jKdzOAqpN3o&list=PL9UNgBC7ODr6nUdi9iL-h0Te9CbgKe78t&index=10&t=0s"
       sublinks:
-        - link: "https://youtu.be/jKdzOAqpN3o"
+        - link: "https://www.youtube.com/watch?v=jKdzOAqpN3o&list=PL9UNgBC7ODr6nUdi9iL-h0Te9CbgKe78t&index=10&t=0s"
           text: "Video"
         - link: "https://compsocialscience.github.io/summer-institute/2019/materials/day2-digital-trace-data/apis/Rpres/APIs.html"
           text: "Slides"
